--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>UchaPortfolio</title>
+  <title>Uchekzzz</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://api.fontshare.com/v2/css?f[]=general-sans@400,500,700&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
