add meta tags with dummy content for thumbnail

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
   <link rel="icon" type="image/x-icon" href="avatar.jpg">
   <link href="https://api.fontshare.com/v2/css?f[]=general-sans@400,500,700&display=swap" rel="stylesheet">
 
+  <meta property="og:title" content="My portfolio" />
+  <meta property="og:description" content="This is my portfolio." />
+  <meta property="og:image" content="https://www.shutterstock.com/image-vector/generic-social-media-news-feed-260nw-2420900141.jpg" />
+  <meta property="og:url" content="https://www.ucha.today/" />
+  <meta property="og:type" content="website" />
 </head>
 
 <body>
