--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
   <meta property="og:title" content="My portfolio" />
   <meta property="og:description" content="This is my portfolio." />
-  <meta property="og:image" content="https://www.shutterstock.com/image-vector/generic-social-media-news-feed-260nw-2420900141.jpg" />
+  <meta property="og:image" content="https://www.ucha.today/assets/1.svg" />
   <meta property="og:url" content="https://www.ucha.today/" />
   <meta property="og:type" content="website" />
 </head>
