--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>ucha.today</title>
+  <meta property="og:title" content="Ucha Gulbani" />
+  <meta property="og:description" content="Digital product designer focused on functional, scalable, and production-ready experiences." />
+  <meta property="og:image" content="https://www.ucha.today/assets/thumbnail.png" />
+  <meta property="og:url" content="https://www.ucha.today/" />
+  <meta property="og:type" content="website" />
+
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="avatar.jpg">
   <link href="https://api.fontshare.com/v2/css?f[]=general-sans@400,500,700&display=swap" rel="stylesheet">
-
-  <meta property="og:title" content="My portfolio" />
-  <meta property="og:description" content="This is my portfolio." />
-  <meta property="og:image" content="https://www.ucha.today/assets/thumbnail.png" />
-  <meta property="og:url" content="https://www.ucha.today/" />
-  <meta property="og:type" content="website" />
 </head>
 
 <body>
