add animations, use webps

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>ucha.today</title>
   <meta property="og:title" content="Ucha Gulbani" />
   <meta property="og:description" content="Digital product designer focused on functional, scalable, and production-ready experiences." />
-  <meta property="og:image" content="https://www.ucha.today/assets/thumbnail.png" />
+  <meta property="og:image" content="https://www.ucha.today/assets/thumbnail.webp" />
   <meta property="og:url" content="https://www.ucha.today/" />
   <meta property="og:type" content="website" />
 
